Add missing revery_native.install script (#281)
* Add missing revery_native install script

* Revert package.json autoformat

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
       "esy-installer Revery_Native.install",
       "esy-installer Revery_Shaders.install",
       "esy-installer Revery_UI.install",
-      "esy-installer Revery_UI_Components.install"
+      "esy-installer Revery_UI_Components.install",
+      "esy-installer Revery_Native.install"
     ]
   },
   "dependencies": {
