--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "@opam/cmdliner": "1.0.2",
     "@opam/js_of_ocaml": "github:ocsigen/js_of_ocaml:js_of_ocaml.opam#db257ce",
     "@opam/js_of_ocaml-compiler": "github:ocsigen/js_of_ocaml:js_of_ocaml-compiler.opam#db257ce",
-    "@brisk/brisk-reconciler": "github:briskml/brisk-reconciler#7901934"
+    "@brisk/brisk-reconciler": "github:briskml/brisk-reconciler#7901934",
+    "reason-glfw": "github:bryphe/reason-glfw#4be18fb",
+    "reason-fontkit": "github:bryphe/reason-fontkit#147368b"
   },
   "peerDependencies": {
     "ocaml": "^4.7.0"
