--- a/playground/package.json
+++ b/playground/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/revery-ui/revery#readme",
   "devDependencies": {
+    "fs-extra": "^7.0.1",
     "http-server": "^0.11.1",
     "monaco-editor": "^0.15.6"
   }
