Update build commands

--- a/playground/package.json
+++ b/playground/package.json
@@ -4,7 +4,9 @@
   "description": "Playground for Revery examples",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "node build.js",
+    "start": "http-server ."
   },
   "repository": {
     "type": "git",
