--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "homepage": "https://github.com/bryphe/revery#readme",
   "esy": {
+    "buildsInSource": "_build",
     "build": [ "dune build --root . -j4" ],
     "install": [
       "esy-installer Revery.install",
