--- a/playground/package.json
+++ b/playground/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "node build.js",
-    "start": "http-server ."
+    "start": "http-server _build"
   },
   "repository": {
     "type": "git",
