--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build:js:release": "esy b dune build examples/Examples.bc.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "esy dune build @fmt --auto-promote",
-    "ci:format": "esy b .ci/format.sh",
+    "format:windows": "esy b .ci/format.sh",
     "doc": "refmterr esy dune build @doc --root ."
   },
   "homepage": "https://github.com/bryphe/revery#readme",
