Can you use a string for job name?

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ jobs:
   - template: .ci/create-docs.yml
   - template: .ci/publish-build-cache.yml
 
-- job: Hygiene
+- job: 'Hygiene Checks'
   timeoutInMinutes: 0
   pool:
     vmImage: 'macOS 10.13'
