Switch to displayName

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ jobs:
   - template: .ci/publish-build-cache.yml
 
 - job: Hygiene_Checks
-  name: 'Hygiene Checks'
+  displayName: 'Hygiene Checks'
   timeoutInMinutes: 0
   pool:
     vmImage: 'macOS 10.13'
