--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "flex": "^1.2.2"
   },
   "resolutions": {
-    "rebez": "link-dev:../rebez",
+    "rebez": "github:jchavarri/rebez#46cbc183",
     "@opam/cmdliner": "1.0.2",
     "@opam/js_of_ocaml": "github:ocsigen/js_of_ocaml:js_of_ocaml.opam#db257ce",
     "@opam/js_of_ocaml-compiler": "github:ocsigen/js_of_ocaml:js_of_ocaml-compiler.opam#db257ce",
