--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "reason-glfw": "^3.2.1015",
     "reason-fontkit": "^2.2.0",
     "reason-gl-matrix": "^0.9.9302",
+    "rebez": "*",
     "@opam/color": "^0.2.0",
     "@opam/js_of_ocaml": "*",
     "@opam/js_of_ocaml-compiler": "*",
@@ -44,6 +45,7 @@
     "flex": "^1.2.2"
   },
   "resolutions": {
+    "rebez": "github:jchavarri/rebez#46cbc183",
     "@opam/cmdliner": "1.0.2",
     "@opam/js_of_ocaml": "github:ocsigen/js_of_ocaml:js_of_ocaml.opam#db257ce",
     "@opam/js_of_ocaml-compiler": "github:ocsigen/js_of_ocaml:js_of_ocaml-compiler.opam#db257ce",
