--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "dependencies": {
     "@esy-ocaml/reason": "3.4.0",
     "reason-glfw": "^3.2.1015",
-    "reason-fontkit": "^2.2.0",
+    "reason-fontkit": "*",
     "reason-gl-matrix": "^0.9.9302",
     "rebez": "*",
     "@opam/color": "^0.2.0",
@@ -49,7 +49,8 @@
     "@opam/cmdliner": "1.0.2",
     "@opam/js_of_ocaml": "github:ocsigen/js_of_ocaml:js_of_ocaml.opam#db257ce",
     "@opam/js_of_ocaml-compiler": "github:ocsigen/js_of_ocaml:js_of_ocaml-compiler.opam#db257ce",
-    "@brisk/brisk-reconciler": "github:briskml/brisk-reconciler#daa00be"
+    "@brisk/brisk-reconciler": "github:briskml/brisk-reconciler#daa00be",
+    "reason-fontkit": "github:revery-ui/reason-fontkit#fe23cd8"
   },
   "peerDependencies": {
     "ocaml": "^4.7.0"
