--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,6 +22,7 @@ jobs:
   - template: .ci/use-node.yml
   - template: .ci/restore-build-cache.yml
   - template: .ci/esy-build-steps.yml
+  - template: .ci/publish-release.yml
   - template: .ci/create-docs.yml
   - template: .ci/publish-build-cache.yml
 
@@ -64,6 +65,7 @@ jobs:
   - template: .ci/use-node.yml
   - template: .ci/restore-build-cache.yml
   - template: .ci/esy-build-steps.yml
+  - template: .ci/publish-release.yml
   - template: .ci/publish-build-cache.yml
 
 - job: Windows
@@ -82,4 +84,5 @@ jobs:
   - template: .ci/use-node.yml
   - template: .ci/restore-build-cache.yml
   - template: .ci/esy-build-steps.yml
+  - template: .ci/publish-release.yml
   - template: .ci/publish-build-cache.yml
