--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "ocaml": "^4.7.0",
     "@opam/merlin": "*",
     "@opam/dune": "^1.5.0",
-    "@opam/odoc": "*"
+    "@opam/odoc": "*",
+    "reperf": "^1.2.0"
   }
 }
