--- a/package.json
+++ b/package.json
@@ -51,8 +51,7 @@
     "@opam/cmdliner": "1.0.2",
     "@opam/js_of_ocaml": "github:ocsigen/js_of_ocaml:js_of_ocaml.opam#db257ce",
     "@opam/js_of_ocaml-compiler": "github:ocsigen/js_of_ocaml:js_of_ocaml-compiler.opam#db257ce",
-    "@brisk/brisk-reconciler": "github:briskml/brisk-reconciler#daa00be",
-    "reperf": "link:../reperf"
+    "@brisk/brisk-reconciler": "github:briskml/brisk-reconciler#daa00be"
   },
   "peerDependencies": {
     "ocaml": "^4.7.0"
@@ -62,6 +61,6 @@
     "@opam/merlin": "*",
     "@opam/dune": "^1.5.0",
     "@opam/odoc": "*",
-    "reperf": "*"
+    "reperf": "^1.3.0"
   }
 }
