--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "@opam/lwt": "^4.0.0",
     "@opam/lwt_ppx": "^1.1.0",
     "@brisk/brisk-reconciler": "*",
-    "flex": "^1.2.2"
+    "flex": "^1.2.2",
+    "reperf": "^1.3.0"
   },
   "resolutions": {
     "rebez": "github:jchavarri/rebez#46cbc183",
@@ -60,7 +61,6 @@
     "ocaml": "^4.7.0",
     "@opam/merlin": "*",
     "@opam/dune": "^1.5.0",
-    "@opam/odoc": "*",
-    "reperf": "^1.3.0"
+    "@opam/odoc": "*"
   }
 }
