--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,6 +22,7 @@ jobs:
   - template: .ci/use-node.yml
   - template: .ci/restore-build-cache.yml
   - template: .ci/esy-build-steps.yml
+  - template: .ci/esy-bench.yml
   - template: .ci/publish-release.yml
   - template: .ci/create-docs.yml
   - template: .ci/publish-build-cache.yml
@@ -65,6 +66,7 @@ jobs:
   - template: .ci/use-node.yml
   - template: .ci/restore-build-cache.yml
   - template: .ci/esy-build-steps.yml
+  - template: .ci/esy-bench.yml
   - template: .ci/publish-release.yml
   - template: .ci/publish-build-cache.yml
 
@@ -84,5 +86,6 @@ jobs:
   - template: .ci/use-node.yml
   - template: .ci/restore-build-cache.yml
   - template: .ci/esy-build-steps.yml
+  - template: .ci/esy-bench.yml
   - template: .ci/publish-release.yml
   - template: .ci/publish-build-cache.yml
