--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "@opam/lwt": "^4.0.0",
     "@opam/lwt_ppx": "^1.1.0",
     "@brisk/brisk-reconciler": "*",
-    "flex": "^1.2.2"
+    "flex": "^1.2.2",
+    "reperf": "^1.3.0"
   },
   "resolutions": {
     "rebez": "github:jchavarri/rebez#46cbc183",
