--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:release": "esy b dune build --profile=release --root . -j4",
     "build:js": "esy b dune build examples/Examples.bc.js",
     "build:js:release": "esy b dune build examples/Examples.bc.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "esy b dune runtest",
     "format": "esy dune build @fmt --auto-promote",
     "format:windows": "esy b .ci/format.sh",
     "doc": "refmterr esy dune build @doc --root .",
