--- a/playground/src/dune
+++ b/playground/src/dune
@@ -4,5 +4,5 @@
   (js_of_ocaml (flags :standard --toplevel --linkall +toplevel.js +dynlink.js))
   (preprocess (pps js_of_ocaml-ppx))
   (libraries 
-    js_of_ocaml js_of_ocaml-compiler js_of_ocaml-toplevel compiler-libs reglfw)
+    js_of_ocaml js_of_ocaml-compiler js_of_ocaml-toplevel compiler-libs)
 )
