--- a/playground/src/dune
+++ b/playground/src/dune
@@ -4,13 +4,13 @@
  (link_flags (:standard -linkall))
  (preprocess (pps js_of_ocaml-ppx))
  (libraries 
-  bigarray js_of_ocaml js_of_ocaml-compiler js_of_ocaml-toplevel compiler-libs reglm reglfw fontkit Revery)
+  bigarray js_of_ocaml js_of_ocaml-compiler js_of_ocaml-toplevel compiler-libs Revery_Core Revery playground.lib)
  )
 
     (rule
      (targets export.txt)
      (deps Playground.bc)
-     (action (run jsoo_listunits -o %{targets} stdlib bigarray reglm reglfw fontkit Revery)))
+     (action (run jsoo_listunits -o %{targets} stdlib bigarray Revery_Core Revery playground.lib)))
 
     (rule
      (targets Playground.js)
@@ -20,10 +20,16 @@
        --toplevel
        --pretty
        --noruntime
+       --disable genprim
        %{lib:js_of_ocaml-compiler:runtime.js}
        %{lib:js_of_ocaml-compiler:toplevel.js}
        %{lib:js_of_ocaml-compiler:dynlink.js}
        %{lib:reglm:gl-matrix_stubs.js}
+       %{lib:reglfw:glfw_stubs.js}
+       %{lib:reglfw:gl_stubs.js}
+       %{lib:reglfw:image_stubs.js}
+       %{lib:reglfw:stb_image_stubs.js}
+       %{lib:Revery_Core:file.js}
        %{dep:Playground.bc}
        -o %{targets}
       )))
