Add gitignore, package.json updates

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "create-release": "sh ./scripts/release.sh"
   },
   "homepage": "https://github.com/bryphe/revery#readme",
+  "buildsInSource": "_build",
   "esy": {
     "build": [ "dune build --root . -j4" ],
     "install": [
@@ -52,8 +53,11 @@
     "rebez": "github:jchavarri/rebez#46cbc183",
     "@opam/cmdliner": "1.0.2",
     "@opam/dune": "1.7.3",
-    "@opam/js_of_ocaml": "github:ocsigen/js_of_ocaml:js_of_ocaml.opam#db257ce",
-    "@opam/js_of_ocaml-compiler": "github:ocsigen/js_of_ocaml:js_of_ocaml-compiler.opam#db257ce",
+    "@opam/js_of_ocaml": "link:../../js_of_ocaml/js_of_ocaml.opam",
+    "@opam/js_of_ocaml-lwt": "link:../../js_of_ocaml/js_of_ocaml-lwt.opam",
+    "@opam/js_of_ocaml-compiler": "link:../../js_of_ocaml/js_of_ocaml-compiler.opam",
+    "@opam/js_of_ocaml-ppx": "link:../../js_of_ocaml/js_of_ocaml-ppx.opam",
+    "@opam/js_of_ocaml-toplevel": "link:../../js_of_ocaml/js_of_ocaml-toplevel.opam",
     "@brisk/brisk-reconciler": "github:briskml/brisk-reconciler#daa00be"
   },
   "peerDependencies": {
