--- a/.ci/create-docs.yml
+++ b/.ci/create-docs.yml
@@ -1,11 +1,11 @@
 # These steps are only run on Linux
 
 steps:
-  - script: "esy doc"
+  - script: "esy '@docs' build"
     displayName: "Build docs"
     condition: and(succeeded(), eq(variables['Agent.OS'], 'Linux'))
 
-  - script: echo '##vso[task.setvariable variable=docsPath]'$(esy echo '#{self.target_dir}/default/_doc/_html')
+  - script: echo '##vso[task.setvariable variable=docsPath]'$(esy '@docs' echo '#{self.target_dir}/default/_doc/_html')
     displayName: "Save docsPath in variable"
     condition: and(succeeded(), eq(variables['Agent.OS'], 'Linux'))
 
