--- a/.ci/create-docs.yml
+++ b/.ci/create-docs.yml
@@ -1,7 +1,7 @@
 # These steps are only run on Linux
 
 steps:
-  - script: "esy '@docs' build"
+  - script: "esy '@doc' build"
     displayName: "Build docs"
     condition: and(succeeded(), eq(variables['Agent.OS'], 'Linux'))
 
