--- a/.ci/create-docs.yml
+++ b/.ci/create-docs.yml
@@ -1,6 +1,10 @@
 # These steps are only run on Linux
 
 steps:
+  - script: "esy '@doc' install"
+    displayName: "Install doc dependency"
+    condition: and(succeeded(), eq(variables['Agent.OS'], 'Linux'))
+
   - script: "esy '@doc' build"
     displayName: "Build docs"
     condition: and(succeeded(), eq(variables['Agent.OS'], 'Linux'))
