Remove extra packages

--- a/package.json
+++ b/package.json
@@ -19,16 +19,7 @@
   "esy": {
     "build": [ "dune build --root . -j4" ],
     "install": [
-      "esy-installer Revery.install",
-      "esy-installer Revery_Core.install",
-      "esy-installer Revery_Geometry.install",
-      "esy-installer Revery_Math.install",
-      "esy-installer Revery_Draw.install",
-      "esy-installer Revery_Native.install",
-      "esy-installer Revery_Shaders.install",
-      "esy-installer Revery_UI.install",
-      "esy-installer Revery_UI_Components.install",
-      "esy-installer Revery_Native.install"
+      "esy-installer Revery.install"
     ]
   },
   "dependencies": {
