--- a/src/Draw/dune
+++ b/src/Draw/dune
@@ -1,5 +1,5 @@
 (library
     (name Revery_Draw)
-    (public_name Revery_Draw)
+    (public_name Revery.Draw)
     (preprocess (pps lwt_ppx))
     (libraries brisk-reconciler lwt lwt.unix reglfw flex fontkit rebez.lib Revery_Core Revery_Shaders Revery_Geometry Revery_Math))
