--- a/src/UI/dune
+++ b/src/UI/dune
@@ -1,5 +1,5 @@
 (library
     (name Revery_UI)
-    (public_name Revery_UI)
+    (public_name Revery.UI)
     (preprocess (pps lwt_ppx))
     (libraries brisk-reconciler lwt lwt.unix reglfw flex fontkit rebez.lib Revery_Core Revery_Draw Revery_Shaders Revery_Geometry Revery_Math))
