--- a/examples/dune
+++ b/examples/dune
@@ -13,4 +13,9 @@
 (install
     (section bin)
     (package Revery)
-    (files Roboto-Regular.ttf FontAwesome5FreeSolid.otf binary.dat index.html Examples.bc.js gl-matrix-min.js outrun-logo.png outrun-icon.png revery-icon.png))
+    (files Roboto-Regular.ttf FontAwesome5FreeSolid.otf binary.dat outrun-logo.png outrun-icon.png revery-icon.png))
+
+(install
+    (section bin)
+    (package ReveryExampleJs)
+    (files index.html Examples.bc.js gl-matrix-min.js))
