--- a/.ci/create-docs.yml
+++ b/.ci/create-docs.yml
@@ -9,7 +9,7 @@ steps:
     displayName: "Build docs"
     condition: and(succeeded(), eq(variables['Agent.OS'], 'Linux'))
 
-  - script: echo '##vso[task.setvariable variable=docsPath]'$(esy '@docs' echo '#{self.target_dir}/default/_doc/_html')
+  - script: echo '##vso[task.setvariable variable=docsPath]'$(esy '@doc' echo '#{self.target_dir}/default/_doc/_html')
     displayName: "Save docsPath in variable"
     condition: and(succeeded(), eq(variables['Agent.OS'], 'Linux'))
 
