--- a/.ci/esy-check-hygiene.yml
+++ b/.ci/esy-check-hygiene.yml
@@ -14,6 +14,10 @@ steps:
     displayName: 'esy @bench install'
   - script: git diff --exit-code
     displayName: 'check that `bench.esy.lock` is up-to-date. If this fails, commit `bench.esy.lock` changes and re-submit PR.'
+  - script: esy @js install
+    displayName: 'esy @js install'
+  - script: git diff --exit-code
+    displayName: 'check that `js.esy.lock` is up-to-date. If this fails, commit `js.esy.lock` changes and re-submit PR.'
   - script: esy @doc install
     displayName: 'esy @doc install'
   - script: git diff --exit-code
