Fix build steps

--- a/.ci/esy-build-steps.yml
+++ b/.ci/esy-build-steps.yml
@@ -15,9 +15,9 @@ steps:
   - script: esy x Examples
     displayName: 'esy x Examples'
     continueOnError: true
-  - script: esy '@js' install
+  - script: esy @js install
     displayName: 'js: esy install'
-  - script: esy '@js' build
+  - script: esy @js build
     displayName: 'js: esy build'
   - script: esy create-release
     displayName: 'esy create-release'
