--- a/test/UI/dune
+++ b/test/UI/dune
@@ -2,4 +2,4 @@
     (name Revery_UI_Test)
     (library_flags (-linkall))
     (modules (:standard))
-    (libraries Revery_UI Revery_Math rejest))
+    (libraries Revery_UI Revery_UI_Primitives Revery_Math rejest))
