pesy@0.4.2 bug repro

--- a/package.json
+++ b/package.json
@@ -44,13 +44,14 @@
     "@opam/cmdliner": "1.0.2",
     "@opam/js_of_ocaml": "github:ocsigen/js_of_ocaml:js_of_ocaml.opam#db257ce",
     "@opam/js_of_ocaml-compiler": "github:ocsigen/js_of_ocaml:js_of_ocaml-compiler.opam#db257ce",
-    "@brisk/brisk-reconciler": "github:briskml/brisk-reconciler#dd933fc"
+    "@brisk/brisk-reconciler": "github:briskml/brisk-reconciler#dd933fc",
+    "pesy": "0.4.2"
   },
   "peerDependencies": {
-    "ocaml": "^4.7.0"
+    "ocaml": ">=4.6.0 <4.8.0"
   },
   "devDependencies": {
-    "ocaml": "^4.7.0",
+    "ocaml": ">=4.6.0 <4.8.0",
     "@opam/merlin": "*",
     "@opam/dune": "1.7.3"
   }
