--- a/.ci/esy-check-hygiene.yml
+++ b/.ci/esy-check-hygiene.yml
@@ -18,6 +18,10 @@ steps:
     displayName: 'esy @js install'
   - script: git diff --exit-code
     displayName: 'check that `js.esy.lock` is up-to-date. If this fails, commit `js.esy.lock` changes and re-submit PR.'
+  - script: esy @test install
+    displayName: 'esy @test install'
+  - script: git diff --exit-code
+    displayName: 'check that `test.esy.lock` is up-to-date. If this fails, commit `test.esy.lock` changes and re-submit PR.'
   - script: esy @doc install
     displayName: 'esy @doc install'
   - script: git diff --exit-code
