--- a/.ci/esy-build-steps.yml
+++ b/.ci/esy-build-steps.yml
@@ -10,9 +10,9 @@ steps:
     displayName: 'esy install'
   - script: esy build
     displayName: 'esy build'
-  - script: esy '@test' install
+  - script: esy @test install
     displayName: 'esy @test install'
-  - script: esy '@test' run
+  - script: esy @test run
     displayName: 'esy @test run'
   - script: esy x Examples
     displayName: 'esy x Examples'
