--- a/src/Core/dune
+++ b/src/Core/dune
@@ -3,4 +3,4 @@
     (public_name Revery.Core)
     (js_of_ocaml (javascript_files file.js))
     (cxx_names file)
-    (libraries console.lib str color lwt reglfw flex fontkit))
+    (libraries threads console.lib str color lwt reglfw flex fontkit))
