--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "@brisk/brisk-reconciler": "*",
     "flex": "^1.2.2",
     "reperf": "^1.4.0",
-    "@reason-native/console": "^0.0.3"
+    "@reason-native/console": "^0.0.3",
+    "rench": "^1.9.0"
   },
   "resolutions": {
     "rebez": "github:jchavarri/rebez#46cbc183",
