--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "reperf": "^1.4.0",
     "@reason-native/console": "^0.0.3",
     "rench": "^1.9.0",
-    "reason-font-manager": "*",
+    "reason-font-manager": "^2.0.0"
   },
   "resolutions": {
     "rebez": "github:jchavarri/rebez#46cbc183",
@@ -47,8 +47,7 @@
     "@opam/js_of_ocaml": "github:ocsigen/js_of_ocaml:js_of_ocaml.opam#db257ce",
     "@opam/js_of_ocaml-compiler": "github:ocsigen/js_of_ocaml:js_of_ocaml-compiler.opam#db257ce",
     "@brisk/brisk-reconciler": "github:briskml/brisk-reconciler#dd933fc",
-    "pesy": "0.4.1",
-    "reason-font-manager": "link:../reason-font-manager"
+    "pesy": "0.4.1"
   },
   "peerDependencies": {
     "ocaml": ">=4.6.0"
