--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "reason-gl-matrix": "^0.9.9305",
     "rebez": "*",
     "@opam/color": "^0.2.0",
-    "@opam/js_of_ocaml": "*",
-    "@opam/js_of_ocaml-compiler": "*",
-    "@opam/js_of_ocaml-lwt": "*",
+    "@opam/js_of_ocaml": "^3.4.0",
+    "@opam/js_of_ocaml-compiler": "^3.4.0",
+    "@opam/js_of_ocaml-lwt": "^3.4.0",
     "@opam/lwt": "^4.0.0",
     "@opam/lwt_ppx": "^1.1.0",
     "@brisk/brisk-reconciler": "*",
@@ -44,8 +44,6 @@
   "resolutions": {
     "rebez": "github:jchavarri/rebez#46cbc183",
     "@opam/cmdliner": "1.0.2",
-    "@opam/js_of_ocaml": "github:ocsigen/js_of_ocaml:js_of_ocaml.opam#db257ce",
-    "@opam/js_of_ocaml-compiler": "github:ocsigen/js_of_ocaml:js_of_ocaml-compiler.opam#db257ce",
     "@brisk/brisk-reconciler": "github:briskml/brisk-reconciler#dd933fc",
     "pesy": "0.4.1"
   },
