Start converting to use Sdl2 API

--- a/src/Geometry/dune
+++ b/src/Geometry/dune
@@ -1,4 +1,4 @@
 (library
     (name Revery_Geometry)
     (public_name Revery.Geometry)
-    (libraries lwt lwt.unix reglfw Revery_Shaders))
+    (libraries lwt lwt.unix sdl2 Revery_Shaders))
