--- a/src/Draw/dune
+++ b/src/Draw/dune
@@ -2,4 +2,4 @@
     (name Revery_Draw)
     (public_name Revery.Draw)
     (preprocess (pps lwt_ppx))
-    (libraries brisk-reconciler lwt lwt.unix reglfw flex fontkit rebez.lib Revery_Core Revery_Shaders Revery_Geometry Revery_Math))
+    (libraries brisk-reconciler lwt lwt.unix sdl2 flex fontkit rebez.lib Revery_Core Revery_Shaders Revery_Geometry Revery_Math))
