--- a/src/Native/dune
+++ b/src/Native/dune
@@ -8,7 +8,7 @@
     (cxx_names dialog)
     (c_flags (:include c_flags.sexp))
     (c_library_flags (:include c_library_flags.sexp))
-    (libraries reglfw))
+    (libraries sdl2))
 
 (rule
 (targets flags.sexp c_flags.sexp c_library_flags.sexp)
