--- a/src/UI/dune
+++ b/src/UI/dune
@@ -2,4 +2,4 @@
     (name Revery_UI)
     (public_name Revery.UI)
     (preprocess (pps lwt_ppx))
-    (libraries brisk-reconciler lwt lwt.unix reglfw flex fontkit rebez.lib Revery_Core Revery_Draw Revery_Shaders Revery_Geometry Revery_Math))
+    (libraries brisk-reconciler lwt lwt.unix sdl2 flex fontkit rebez.lib Revery_Core Revery_Draw Revery_Shaders Revery_Geometry Revery_Math))
