--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "@opam/js_of_ocaml-compiler": "github:ocsigen/js_of_ocaml:js_of_ocaml-compiler.opam#db257ce",
     "@brisk/brisk-reconciler": "github:briskml/brisk-reconciler#dd933fc",
     "pesy": "0.4.1",
-    "reason-sdl2": "link:../reason-sdl2",
-    "reason-fontkit": "link:../reason-fontkit"
+    "reason-fontkit": "link:../reason-fontkit",
+    "reason-sdl2": "link:../reason-sdl2"
   },
   "peerDependencies": {
     "ocaml": ">=4.6.0"
