--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "resolutions": {
     "rebez": "github:jchavarri/rebez#46cbc183",
     "@opam/cmdliner": "1.0.2",
+    "rench": "github:revery-ui/rench#4554280",
     "@brisk/brisk-reconciler": "github:briskml/brisk-reconciler#dd933fc",
     "pesy": "0.4.1"
   },
