--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "esy": {
     "build": [ "dune build -p Revery -j4" ],
     "install": [
-      "esy-installer Revery.install"
+      "esy-installer Revery.install",
+      "bash -c \"#{os == 'windows' ? 'cp /usr/x86_64-w64-mingw32/sys-root/mingw/bin/*.dll $cur__bin': 'echo Build complete'}\""
     ]
   },
   "dependencies": {
