--- a/src/Native/dune
+++ b/src/Native/dune
@@ -6,7 +6,7 @@
     (js_of_ocaml (javascript_files dialog.js))
     (c_names dialog_cocoa dialog_win32 dialog_gtk)
     (cxx_names dialog)
-    (c_flags (:include c_flags.sexp))
+    (c_flags :standard -Wall -Wextra -Werror (:include c_flags.sexp))
     (c_library_flags (:include c_library_flags.sexp))
     (libraries reglfw))
 
