--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "reason-fontkit": "^2.7.0",
     "reason-gl-matrix": "^0.9.9305",
     "rebez": "*",
-    "@opam/color": "^0.2.0",
     "@opam/js_of_ocaml": "^3.4.0",
     "@opam/js_of_ocaml-compiler": "^3.4.0",
     "@opam/js_of_ocaml-lwt": "^3.4.0",
@@ -50,7 +49,7 @@
     "pesy": "0.4.1"
   },
   "devDependencies": {
-    "ocaml": ">=4.6.0",
+    "ocaml": ">=4.6.0 <4.9.0",
     "@opam/merlin": "*",
     "@opam/dune": "^1.7.3"
   }
