--- a/package.json
+++ b/package.json
@@ -40,15 +40,14 @@
     "@reason-native/console": "^0.0.3",
     "rench": "^1.9.0",
     "reason-font-manager": "^2.0.0",
-    "reason-sdl2": "*"
+    "reason-sdl2": "^2.10.2001"
   },
   "resolutions": {
     "rebez": "github:jchavarri/rebez#46cbc183",
     "@opam/cmdliner": "1.0.2",
     "rench": "github:revery-ui/rench#4554280",
     "@brisk/brisk-reconciler": "github:briskml/brisk-reconciler#dd933fc",
-    "pesy": "0.4.1",
-    "reason-sdl2": "link:../reason-sdl2"
+    "pesy": "0.4.1"
   },
   "devDependencies": {
     "ocaml": ">=4.6.0 <4.9.0",
