GLFW -> SDL2 migration (#555)
* Initial prototyping

* Start converting to use Sdl2 API

* Update examples

* Unblock more of the API

* Get icon loading again

* glfwWindow -> sdlWindow

* Hook up mouse move events again

* Slowly wire up mouse cursor

* Hook scrollwheel event back up

* Remove scaling experiment

* Fix GC bug

* More fixes

* Pivot keyboard event API to handle new keydown / keyup events

* Hook up types for keyboard event

* Formatting

* Get compiling again

* Formatting

* Fix up pattern matching

* Hook up some initial key input

* Hook up keydown / keyup events to event system

* Update App/Window

* Update package.json

* Hook up additional events

* Hook up TextInput event

* Update lockfiles

* Remove resolutions; use published reason-sdl2

* Improve performance of getting windows

* Continue moving window management to hash table in app

* Scaling improvements

* Update metrics after applying scaled size

* Mark metrics as dirty after reposition, since scale factor might've changed if moving across monitors

* Log update metrics

* Update logging

* Tweak example size

* Fix up linux DPI calculations

* Remove incomplete MonitorAPI

* Some compilation fixes

* Formatting

* Remove noisy log

* Hook up more of the API

* Flush events in loop

* Fix mouse cursor API

* Override SDL2

* Update

* Additional API changes

* Merge dune file

* Fix merge conflicts

* Remaining API

* Formatting

* Update esy-sdl2 dep

* Update lockfiles

* Remove JS resolution

* Remove example-running, as it actually runs on OSX now

* Pick up newer reason-sdl2

* Update lockfiles

* Wire up TextInput APIs

* Fix merge issue

* Formatting

--- a/src/Core/dune
+++ b/src/Core/dune
@@ -3,4 +3,4 @@
     (public_name Revery.Core)
     (js_of_ocaml (javascript_files file.js))
     (cxx_names file)
-    (libraries threads console.lib str lwt reglfw flex fontkit Rench))
+    (libraries threads console.lib str lwt sdl2 flex fontkit Rench))
