--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
   },
   "dependencies": {
     "@esy-ocaml/reason": "^3.4.0",
-    "reason-glfw": "^3.2.1029",
     "reason-fontkit": "^2.7.0",
     "reason-gl-matrix": "^0.9.9305",
     "rebez": "*",
@@ -38,7 +37,8 @@
     "reperf": "^1.4.0",
     "@reason-native/console": "^0.0.3",
     "rench": "^1.9.0",
-    "reason-font-manager": "^2.0.0"
+    "reason-font-manager": "^2.0.0",
+    "reason-sdl2": "^2.10.3002"
   },
   "resolutions": {
     "rebez": "github:jchavarri/rebez#46cbc183",
@@ -49,7 +49,7 @@
   },
   "devDependencies": {
     "ocaml": ">=4.6.0 <4.9.0",
-    "@opam/merlin": "*",
-    "@opam/dune": "^1.7.3"
+    "@opam/merlin": "^3.3.2",
+    "@opam/dune": "^1.8.0"
   }
 }
