--- a/examples/dune
+++ b/examples/dune
@@ -1,6 +1,6 @@
 (executables
     (names Examples)
-    (preprocess (pps brisk_jsx lwt_ppx))
+    (preprocess (pps brisk-reconciler.ppx lwt_ppx))
     (package Revery)
     (public_names Examples)
     (libraries
