--- a/src/UI_Components/dune
+++ b/src/UI_Components/dune
@@ -1,4 +1,4 @@
 (library
     (name Revery_UI_Components)
     (public_name Revery.UI_Components)
-    (libraries lwt lwt.unix sdl2 flex fontkit Revery_Core Revery_Shaders Revery_Geometry Revery_Math Revery_UI Revery_UI_Primitives Revery_UI_Hooks))
+    (libraries lwt lwt.unix sdl2 flex fontkit Revery_Core Revery_Math Revery_UI Revery_UI_Primitives Revery_UI_Hooks))
