--- a/src/UI_Primitives/dune
+++ b/src/UI_Primitives/dune
@@ -1,4 +1,4 @@
 (library
     (name Revery_UI_Primitives)
     (public_name Revery.UI_Primitives)
-    (libraries lwt lwt.unix sdl2 flex fontkit Revery_Core Revery_Shaders Revery_Geometry Revery_Math Revery_UI))
+    (libraries lwt lwt.unix sdl2 flex fontkit Revery_Core Revery_Math Revery_UI))
