--- a/src/dune
+++ b/src/dune
@@ -1,7 +1,7 @@
 (library
     (name Revery)
     (public_name Revery)
-    (libraries console.lib lwt lwt.unix sdl2 Revery_Core Revery_Font Revery_Draw Revery_Math Revery_Shaders Revery_Geometry Revery_UI Revery_UI_Components Revery_Native Revery_UI_Primitives Revery_UI_Hooks))
+    (libraries console.lib lwt lwt.unix sdl2 Revery_Core Revery_Font Revery_Draw Revery_Math Revery_UI Revery_UI_Components Revery_Native Revery_UI_Primitives Revery_UI_Hooks))
 
 (documentation
    (package Revery)
