chore: use rench-package

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "reperf": "^1.4.0",
     "@reason-native/console": "^0.0.3",
     "reason-font-manager": "^2.0.0",
-    "rench": "github:revery-ui/rench#4554280",
+    "rench": "^1.9.1",
     "rebez": "github:jchavarri/rebez#46cbc183",
     "reason-sdl2": "^2.10.3006"
   },
