--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@opam/lwt_ppx": "^1.1.0",
     "brisk-reconciler": "^0.0.2",
     "flex": "^1.2.2",
+    "@reason-native/rely": "*",
     "reperf": "^1.4.0",
     "@reason-native/console": "^0.0.3",
     "rench": "^1.9.0",
