--- a/test/UI/dune
+++ b/test/UI/dune
@@ -1,5 +1,5 @@
 (library
     (name Revery_UI_Test)
-    (library_flags (-linkall))
+    (library_flags (-linkall -g))
     (modules (:standard))
-    (libraries Revery_UI Revery_UI_Primitives Revery_Math rejest))
+    (libraries Revery_UI Revery_UI_Primitives Revery_Math rely.lib))
