--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@opam/lwt": "^4.0.0",
     "@opam/lwt_ppx": "^1.1.0",
     "brisk-reconciler": "^0.0.2",
+    "conventional-changelog-conventionalcommits": "^4.2.1",
     "flex": "^1.2.2",
     "@reason-native/rely": "*",
     "reperf": "^1.4.0",
@@ -43,7 +44,8 @@
     "reason-font-manager": "^2.0.0",
     "rench": "^1.9.1",
     "rebez": "github:jchavarri/rebez#46cbc183",
-    "reason-sdl2": "^2.10.3008"
+    "reason-sdl2": "^2.10.3008",
+    "standard-version": "^7.0.0"
   },
   "resolutions": {
     "@opam/cmdliner": "1.0.2",
