--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,9 +41,8 @@ jobs:
     # ESY__NPM_ROOT: /usr/local/lib/node_modules/esy
 
   steps:
-  - template: .ci/use-node.yml
   - script: brew update
-  - script: brew install libpng ragel
+  - script: brew install node libpng ragel
   - template: .ci/restore-build-cache.yml
   - template: .ci/esy-check-hygiene.yml
   - template: .ci/publish-build-cache.yml
@@ -61,9 +60,8 @@ jobs:
     # ESY__NPM_ROOT: /usr/local/lib/node_modules/esy
 
   steps:
-  - template: .ci/use-node.yml
   - script: brew update
-  - script: brew install libpng ragel
+  - script: brew install node libpng ragel
   - template: .ci/restore-build-cache.yml
   - template: .ci/esy-build-steps.yml
   - template: .ci/esy-bench.yml
