--- a/package.json
+++ b/package.json
@@ -28,26 +28,25 @@
   },
   "dependencies": {
     "@esy-ocaml/reason": "^3.4.0",
-    "reason-fontkit": "^2.7.0",
-    "reason-gl-matrix": "^0.9.9305",
     "@opam/js_of_ocaml": "^3.4.0",
     "@opam/js_of_ocaml-compiler": "^3.4.0",
     "@opam/js_of_ocaml-lwt": "^3.4.0",
     "@opam/lwt": "^4.0.0",
     "@opam/lwt_ppx": "^1.1.0",
+    "@reason-native/console": "^0.0.3",
+    "@reason-native/rely": "*",
     "brisk-reconciler": "^0.0.2",
     "flex": "^1.2.2",
-    "@reason-native/rely": "*",
-    "reperf": "^1.4.0",
-    "@reason-native/console": "^0.0.3",
     "reason-font-manager": "^2.0.0",
+    "reason-fontkit": "^2.7.0",
+    "reason-gl-matrix": "^0.9.9305",
+    "reason-sdl2": "^2.10.3007",
+    "rebez": "github:jchavarri/rebez#03fa3b7",
     "rench": "^1.9.1",
-    "rebez": "github:jchavarri/rebez#46cbc183",
-    "reason-sdl2": "^2.10.3007"
+    "reperf": "^1.4.0"
   },
   "resolutions": {
-    "@opam/cmdliner": "1.0.2",
-    "pesy": "0.4.1"
+    "@opam/cmdliner": "1.0.2"
   },
   "devDependencies": {
     "ocaml": ">=4.6.0 <4.9.0",
