--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.26.0",
   "description": "App toolkit built with Reason",
   "license": "MIT",
-  "bugs": { "url": "https://github.com/bryphe/revery/issues" },
+  "bugs": {
+    "url": "https://github.com/bryphe/revery/issues"
+  },
   "scripts": {
     "build": "esy b",
     "build:release": "esy b dune build --profile=release --root . -j4",
@@ -16,7 +18,12 @@
   },
   "homepage": "https://github.com/bryphe/revery#readme",
   "esy": {
-    "build": [ "dune build -p Revery -j4" ],
+    "build": [
+      "dune build -p Revery -j4"
+    ],
+    "buildDev": [
+      "refmterr dune build -p Revery -j4"
+    ],
     "install": [
       "esy-installer Revery.install",
       "bash -c \"#{os == 'windows' ? 'cp /usr/x86_64-w64-mingw32/sys-root/mingw/bin/*.dll $cur__bin': 'echo Build complete'}\""
@@ -44,10 +51,11 @@
     "rebez": "github:jchavarri/rebez#46cbc183",
     "@opam/cmdliner": "1.0.2",
     "rench": "github:revery-ui/rench#4554280",
-    "@brisk/brisk-reconciler": "github:briskml/brisk-reconciler#3de26e",
+    "@brisk/brisk-reconciler": "github:briskml/brisk-reconciler#6ff66fa",
     "pesy": "0.4.1"
   },
   "devDependencies": {
+    "refmterr": "*",
     "ocaml": ">=4.6.0 <4.9.0",
     "@opam/merlin": "^3.3.2",
     "@opam/dune": "^1.8.0"
