--- a/src/UI_Hooks/dune
+++ b/src/UI_Hooks/dune
@@ -1,4 +1,5 @@
 (library
     (name Revery_UI_Hooks)
     (public_name Revery.UI_Hooks)
+    (preprocess (pps brisk-reconciler.ppx lwt_ppx))
     (libraries lwt lwt.unix sdl2 flex fontkit Revery_Core Revery_Shaders Revery_Geometry Revery_Math Revery_UI))
