--- a/package.json
+++ b/package.json
@@ -42,12 +42,11 @@
     "@reason-native/console": "^0.0.3",
     "reason-font-manager": "^2.0.0",
     "rench": "^1.9.1",
-    "rebez": "github:jchavarri/rebez#46cbc183",
+    "rebez": "github:jchavarri/rebez#03fa3b7",
     "reason-sdl2": "^2.10.3008"
   },
   "resolutions": {
-    "@opam/cmdliner": "1.0.2",
-    "pesy": "0.4.1"
+    "@opam/cmdliner": "1.0.2"
   },
   "devDependencies": {
     "ocaml": ">=4.6.0 <4.9.0",
