--- a/test/UI/dune
+++ b/test/UI/dune
@@ -2,4 +2,5 @@
     (name Revery_UI_Test)
     (library_flags (-linkall -g))
     (modules (:standard))
+    (preprocess (pps brisk-reconciler.ppx))
     (libraries Revery_UI Revery_UI_Primitives Revery_Math rely.lib))
