Chore: Mark lockfiles as generated to hide them in github PRs (#633)
* Mark lockfiles as generated to hide them in github PRs

* Keep .sh line endings

--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,8 @@
 # to CRLF. This causes problems for shell scripts, as bash
 # gets choked up on the extra `\r` character.
 *.sh text eol=lf
+
+# Hide lockfile updates
+*esy.lock/* linguist-generated
+
+
