--- a/package.json
+++ b/package.json
@@ -33,8 +33,6 @@
     "@brisk/brisk-reconciler": "github:briskml/brisk-reconciler#0a2e476",
     "@esy-ocaml/reason": "^3.4.0",
     "@opam/bos": "0.2.0",
-    "@opam/cohttp-lwt-unix": "2.3.0",
-    "@opam/cohttp": "2.3.0",
     "@opam/js_of_ocaml-compiler": "^3.4.0",
     "@opam/js_of_ocaml-lwt": "^3.4.0",
     "@opam/js_of_ocaml": "^3.4.0",
@@ -43,6 +41,7 @@
     "@reason-native/console": "^0.0.3",
     "@reason-native/rely": "*",
     "fetch-core": "0.1.0-alpha.2",
+    "fetch-native-lwt": "github:lessp/reason-fetch:fetch-native-lwt.json#6179392",
     "flex": "^1.2.2",
     "reason-font-manager": "^2.0.0",
     "reason-fontkit": "^2.7.0",
@@ -53,7 +52,10 @@
     "reason-sdl2": "^2.10.3009"
   },
   "resolutions": {
-    "@opam/cmdliner": "1.0.2"
+    "@opam/cmdliner": "1.0.2",
+    "@opam/httpaf-lwt-unix": "anmonteiro/httpaf:httpaf-lwt-unix.opam#76b461bed081c64908fb1fdfa076ab2c936ca622",
+    "@opam/httpaf-lwt": "anmonteiro/httpaf:httpaf-lwt.opam#76b461bed081c64908fb1fdfa076ab2c936ca622",
+    "@opam/httpaf": "anmonteiro/httpaf:httpaf.opam#76b461bed081c64908fb1fdfa076ab2c936ca622"
   },
   "devDependencies": {
     "ocaml": ">=4.6.0 <4.8.0",
