Add ls /Users to debug

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,6 +41,7 @@ jobs:
     # ESY__NPM_ROOT: /usr/local/lib/node_modules/esy
 
   steps:
+  - script: ls /Users
   - script: brew update
   - script: brew install libpng ragel
   - script: node --version
